mobile home page update 1.0

--- a/index.html
+++ b/index.html
@@ -162,39 +162,16 @@
 						<a title="" href="index.html">home</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="blog.html">blog</a>
-						<span class="open-children"><i class="fa fa-angle-down"></i></span>
-						<ul class="subnav">
-							<li>
-								<a href="blog.html"><span>blog</span></a>
-							</li>
-							<li><a href="post.html" title=""><span>post 1</span></a></li>
-							<li><a href="post2.html" title=""><span>post 2</span></a></li>
-						</ul>
+						<a title="" href="blog.html">reviews</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="restaurant.html">Restaurant</a>
+						<a title="" href="menu.html" class="">Categories</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="menu.html" class="">Menu</a>
-						<span class="open-children"><i class="fa fa-angle-down"></i></span>
-						<ul class="subnav">
-							<li><a href="menu.html" title=""><span>Menu 1</span></a></li>
-							<li><a href="menu2.html" title=""><span>Menu 2</span></a></li>
-							<li><a href="menu3.html" title=""><span>Menu 3</span></a></li>
-						</ul>
+						<a title="" href="contact.html">Map</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="reservation.html">Reservation</a>
-					</li>
-					<li class="nav-item">
-						<a title="" href="contact.html">Contact</a>
-					</li>
-					<li class="nav-item">
-						<a title="" href="shop.html">Shop</a>
-					</li>
-					<li class="nav-item">
-						<a title="" href="gallery.html">Gallery</a>
+						<a title="" href="shop.html">Merch</a>
 					</li>
 				</ul>
 			</div>
@@ -266,33 +243,21 @@
 		<i class="fa fa-arrow-circle-o-up"></i>
 	</a>
 
-	<h2>Berg restaurant</h2>
+	<h2>Hydro Boys</h2>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center v-card">
 
-					<div class="col-sm-6 col-lg-3">
-						<div class="open-daily">
-							<span class="day">Monday - Thursday</span>
-							<span class="hours">7.00 - 21.00</span>
-						</div>
-					</div>
 					<div class="col-sm-6 col-lg-3">	
-						<div class="open-daily">
-							<span class="day">Friday - Sunday</span>
-							<span class="hours">7.00 - 23.00</span>
+						<div class="simple-contact">
+							<span class="address">Austin, TX</span>
+							<span class="postal-code">123 Congress Ave</span>
 						</div>
 					</div>	
 					<div class="col-sm-6 col-lg-3">	
 						<div class="simple-contact">
-							<span class="address">Armii Krajowej 17</span>
-							<span class="postal-code">58-100 Świdnica</span>
-						</div>
-					</div>	
-					<div class="col-sm-6 col-lg-3">	
-						<div class="simple-contact">
-							<span class="mobile"><a href="#">+48 889 889 889</a></span>
-							<span class="email"><a href="#">restaurant@berg.com</a></span>
+							<span class="mobile"><a href="#">(123)456-7891</a></span>
+							<span class="email"><a href="#">feedback@daddy.com</a></span>
 						</div>
 					</div>
 			</div>
@@ -317,7 +282,7 @@
 			</ul>
 
 
-	<p class="copyrights">© 2014 <a href="index">Berg</a>. All Rights Reserved. </p>
+	<p class="copyrights">© 2021 <a href="index">Hydro Boys</a>. All Rights Reserved. </p>
 </footer>
 	<div class="home-bg-image"></div>
 </div>
