filled out some more, basic HTML stuff

--- a/map.html
+++ b/map.html
@@ -157,49 +157,15 @@
 			<div class="home-classic-wrapper">
 				<div class="basic-info static ">
 					<div class="container">
-						<img src="img/placeholder1.png" class="yo-anim yo-anim-fade" data-animation-delay="100"/>
 						<div class="col-md-12">
 							<div class="col-sm-6">
-
 								<a href="blog.html" class="btn btn-white btn-lg pull-right yo-anim yo-anim-fade" data-animation-delay="700">LATEST</a>
 							</div>
 							<div class="col-sm-6">
-
-								<a href="menu.html" class="btn btn-white btn-lg pull-left yo-anim yo-anim-fade" data-animation-delay="800">LOCAL MAP</a>
+								<a href="menu.html" class="btn btn-white btn-lg pull-left yo-anim yo-anim-fade" data-animation-delay="800">WATCH LIST</a>
 							</div>
 						</div>
 						<div class="clearfix"></div>
-
-
-						<div class="open-daily  col-md-3 yo-anim yo-anim-fade" data-animation-delay="300">
-							<span class="day"></span>
-							<span class="hours"></span>
-						</div>
-						<div class="simple-contact  col-md-3 yo-anim yo-anim-fade" data-animation-delay="400">
-							<span class="address">Austin, TX</span>
-							<span class="postal-code">123 Congress Ave.</span>
-						</div>
-						<div class="simple-contact col-md-3 yo-anim yo-anim-fade" data-animation-delay="500">
-							<span class="mobile"><a href="#">(123)456-7891</a></span>
-							<span class="email"><a href="#">reviews@submit.com</a></span>
-						</div>
-						<ul class="social-icon yo-anim yo-anim-fade" data-animation-delay="1100" style="margin-top: 180px;">
-							<li>
-								<a href="#"><i class="fa fa-facebook"></i></a>
-							</li>
-							<li>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-							</li>
-							<li>
-								<a href="#"><i class="fa fa-pinterest"></i></a>
-							</li>
-							<li>
-								<a href="#"><i class="fa fa-google-plus"></i></a>
-							</li>
-							<li>
-								<a href="#"><i class="fa fa-youtube"></i></a>
-							</li>
-						</ul>
 					</div>			
 				</div>
 			</div>
