--- a/contact.html
+++ b/contact.html
@@ -105,39 +105,12 @@
 						</li>	
 						
 						<li>
-							<a href="contact.html" class="">map</a>	
+							<a href="map.html" class="">map</a>	
 						</li>
 						<li>
-							<a href="shop.html" class="">merch</a>
+							<a href="contact.html" class="">contact</a>	
 						</li>
-						<li>
-							<a href="#" class="hover-subnav">(temp)</a>
-							<div class="subnav">
-								<ul class="subnav-wrapper ">
-									<li>
-										<a href="menu2.html" class="">grid menu</a>
-									</li>
-									<li>
-										<a href="menu3.html" class="">list menu</a>
-									</li>							
-									<li>
-										<a href="typography.html" class="">typography</a>
-									</li>
-									<li>
-										<a href="gallery.html" class="">gallery</a>
-									</li>						
-									<li>
-										<a href="fullscreen-intro.html">fullscreen intro</a>
-									</li>
-									<li>
-										<a href="top-intro.html">top header</a>
-									</li>
-									<li>
-										<a href="without-intro.html">no header</a>
-									</li>			
-								</ul>
-							</div>
-						</li>				
+		
 					</ul>
 				</div>
 			</div>
@@ -186,8 +159,10 @@
 	<div class="container-fluid pre-content hidden-xs">
 		<div class="row">
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
-				<h1 class="parallax-element-first">We are happy to help</h1>
-				<p class="parallax-element-second">Suspendisse pellentesque ipsum non mauris rutrum mollis. Aliquam tristique dui et nunc iaculis, id accumsan nunc eleifend. Etiam ullamcorper risus vel mollis sagittis.Praesent id lobortis quam. Ut pretium nunc at arcu elementum molestie. Morbi euismod leo ut semper fringilla.</p>
+
+				<h1 class="parallax-element-first">Contact Us!</h1>
+				<p class="parallax-element-second">Let us know if we've missed your restaurant or if you have a really good place worth checking out and we'll go review it!</p>
+
 			</div>
 		</div>
 	</div>
@@ -203,29 +178,29 @@
 
 <section id="contact" class="section-scroll main-section">
 		<header class="section-header">
-			<h2>Berg Restaurant</h2>
+			<h2></h2>
 		</header> 
 	<div class="contact-content container section-padding">
 		<div class="row">
 			<div class="col-xs-12 col-md-5 v-card">
-				<h3>Information</h3>
-				<p>Integer congue tellus laoreet lectus iaculis, sit amet adipiscing elit lacinia. Integer eleifend sapien ut justo tristique, in adipiscing est sagittis.</p>
+				<h3>Contact</h3>
+				<p>We will get back to you as soon as we can</p>
 				<div class="row">
 					<div class="col-sm-6">
 						<h3>Address</h3>
 						<address>
-							<strong>Berg Restaurant</strong><br/>
-							Armii Krajowej 17<br/>
-							58-100 Świdnica<br/>
+							<strong>Berg</strong><br/>
+							Hydro Boys<br/>
+							123 Congress Ave<br/>
 							<!-- <abbr title="Phone">P:</abbr> (123) 456-7890 -->
 						</address>
 					</div>
 					<div class="col-sm-6">
 						<h3>Contact</h3>
 						<p>
-							<a href="#" class="contact-email">restaurant@berg.com</a><br/>
-							<a href="tel:48889889889">+48 889 889 889</a><br/>
-							<a href="tel:48889889889">+48 889 888 860</a><br/>
+							<a href="#" class="contact-email">hydroboys@gmail.com</a><br/>
+							<a href="tel:48889889889">(123)456-7891</a><br/>
+
 						</p>
 					</div>
 
