--- a/menu.html
+++ b/menu.html
@@ -105,39 +105,12 @@
 						</li>	
 						
 						<li>
-							<a href="contact.html" class="">map</a>	
+							<a href="map.html" class="">map</a>	
 						</li>
 						<li>
-							<a href="shop.html" class="">merch</a>
+							<a href="contact.html" class="">contact</a>	
 						</li>
-						<li>
-							<a href="#" class="hover-subnav">(temp)</a>
-							<div class="subnav">
-								<ul class="subnav-wrapper ">
-									<li>
-										<a href="menu2.html" class="">grid menu</a>
-									</li>
-									<li>
-										<a href="menu3.html" class="">list menu</a>
-									</li>							
-									<li>
-										<a href="typography.html" class="">typography</a>
-									</li>
-									<li>
-										<a href="gallery.html" class="">gallery</a>
-									</li>						
-									<li>
-										<a href="fullscreen-intro.html">fullscreen intro</a>
-									</li>
-									<li>
-										<a href="top-intro.html">top header</a>
-									</li>
-									<li>
-										<a href="without-intro.html">no header</a>
-									</li>			
-								</ul>
-							</div>
-						</li>				
+								
 					</ul>
 				</div>
 			</div>
