--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							</div>
 						</li>	
 						<li>
-							<a href="contact.html" class="">map</a>	
+							<a href="map.html" class="">map</a>	
 						</li>
 						<li>
 							<a href="contact.html" class="">contact</a>	
@@ -134,16 +134,13 @@
 						<a title="" href="index.html">home</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="blog.html">reviews</a>
-					</li>
-					<li class="nav-item">
-						<a title="" href="menu.html" class="">Categories</a>
+						<a title="" href="blog.html">Reviews</a>
 					</li>
 					<li class="nav-item">
 						<a title="" href="map.html">Map</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="shop.html">Merch</a>
+						<a title="" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -161,11 +158,11 @@
 						<div class="col-md-12">
 							<div class="col-sm-6">
 
-								<a href="blog.html" class="btn btn-white btn-lg pull-right yo-anim yo-anim-fade" data-animation-delay="700">LATEST</a>
+								<a href="blog.html" class="btn btn-white btn-lg pull-right yo-anim yo-anim-fade" data-animation-delay="700">REVIEWS</a>
 							</div>
 							<div class="col-sm-6">
 
-								<a href="menu.html" class="btn btn-white btn-lg pull-left yo-anim yo-anim-fade" data-animation-delay="800">LOCAL MAP</a>
+								<a href="map.html" class="btn btn-white btn-lg pull-left yo-anim yo-anim-fade" data-animation-delay="800">LOCAL MAP</a>
 							</div>
 						</div>
 						<div class="clearfix"></div>
