--- a/map.html
+++ b/map.html
@@ -59,51 +59,7 @@
 							</div>
 						</li>
 						<li>
-							<a href="menu.html" class="hover-subnav ">categories</a>
-							<div class="subnav image-subnav">
-								<ul class="subnav-wrapper">			
-									<li>
-										<a href="menu.html#starters">bbq</a>
-										<div>
-											<a href="menu.html#starters" class="menu-img" style="background-image: url('img/bbq.jpg')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="menu.html#salads">pizza</a>
-										<div>							
-											<a href="menu.html#salads" class="menu-img" style="background-image: url('img/pizza1.jfif')"></a>
-										</div>
-									
-									</li>
-									<li>
-										<a href="menu.html#soups">burgers</a>
-										<div>
-											<a href="menu.html#soups" class="menu-img" style="background-image: url('img/burger1.jfif')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="menu.html#mains">beer</a>
-										<div>
-											<a href="menu.html#mains" class="menu-img" style="background-image: url('img/beer1.jfif')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="menu.html#desserts">desserts</a>
-										<div>
-											<a href="menu.html#desserts" class="menu-img" style="background-image: url('img/dessert1.jfif')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="menu.html#drinks">cocktails</a>
-										<div>							
-											<a href="menu.html#drinks" class="menu-img" style="background-image: url('img/cocktails.jfif')"></a>
-										</div>
-									</li>
-								</ul>
-							</div>
-						</li>	
-						<li>
-							<a href="contact.html" class="">map</a>	
+							<a href="map.html" class="">map</a>	
 						</li>
 						<li>
 							<a href="contact.html" class="">contact</a>	
@@ -137,13 +93,10 @@
 						<a title="" href="blog.html">reviews</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="menu.html" class="">Categories</a>
-					</li>
-					<li class="nav-item">
 						<a title="" href="map.html">Map</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="shop.html">Merch</a>
+						<a title="" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
