fixed alignment issue

--- a/blog.html
+++ b/blog.html
@@ -167,7 +167,7 @@
 						<div class=""> 
 							<span class="date">03 | 05 | 2021</span>
 							<h3><a href="post2.html">Draught House Pub & Brewery</a></h3>
-							<p>A hidden beer garden with great beer, great food and games. What is there not to love?</p>
+							<p>A hidden beer garden with great beer, great food and games. What is there not to love? Did I mention FREE chips    :O </p>
 							<div class="blog-button">
 								<a href="post2.html" class="btn btn-default">read more</a>
 							</div>
@@ -189,10 +189,12 @@
 						<div class=""> 
 							<span class="date">02 | 29 | 2021</span>
 							<h3><a href="post.html">Bird Bird Biscuit</a></h3>
-							<p>Fried Chicken!? Biscuits!? Damn that's good</p>
+							
+							
+							<p>Fried Chicken!? Biscuits!? Damn that's good.....Seriously though, it's as if world class expertise has been applied to the layman's chicken biscuit. There's no turning back now</p>
 							<div class="blog-button">
 								<a href="post.html" class="btn btn-default">read more</a>
-							</div>
+							</div> 
 						</div>
 					</div>
 				</div>
