fixed post nav-bar

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 										<a href="blog.html" class="">Top</a>
 									</li>
 									<li>
-										<a href="post.html" class="">Latest</a>
+										<a href="blog.html" class="">All</a>
 									</li>
 									<li>
-										<a href="post2.html" class="">worst</a>
+										<a href="blog.html" class="">Worst</a>
 									</li>
 								</ul>
 							</div>
