--- a/blog.html
+++ b/blog.html
@@ -216,27 +216,14 @@
 		<i class="fa fa-arrow-circle-o-up"></i>
 	</a>
 
-	<h2>Berg restaurant</h2>
+	<h2>Berg</h2>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2 text-center v-card">
-
-					<div class="col-sm-6 col-lg-3">
-						<div class="open-daily">
-							<span class="day">Monday - Thursday</span>
-							<span class="hours">7.00 - 21.00</span>
-						</div>
-					</div>
-					<div class="col-sm-6 col-lg-3">	
-						<div class="open-daily">
-							<span class="day">Friday - Sunday</span>
-							<span class="hours">7.00 - 23.00</span>
-						</div>
-					</div>	
+			<div class="col-md-8 col-md-offset-2 text-center v-card">	
 					<div class="col-sm-6 col-lg-3">	
 						<div class="simple-contact">
-							<span class="address">Armii Krajowej 17</span>
-							<span class="postal-code">58-100 Świdnica</span>
+							<span class="address">Hydro Boys</span>
+							<span class="postal-code">123 Congress Ave</span>
 						</div>
 					</div>	
 					<div class="col-sm-6 col-lg-3">	
