added mapDEV.html with map v1

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							</div>
 						</li>	
 						<li>
-							<a href="map.html" class="">map</a>	
+							<a href="mapDEV.html" class="">map</a>	
 						</li>
 						<li>
 							<a href="contact.html" class="">contact</a>	
