google maps API with a marker

--- a/mapDEV.html
+++ b/mapDEV.html
@@ -14,7 +14,37 @@
     </style>
     <script>
       // Initialize and add the map
+      var latitude;
+    var longitude;
+    function FindLatLong(address, callback){
+        var geocoder = new google.maps.Geocoder();
+        geocoder.geocode( { 'address': address}, function(results, status) {
+
+        if (status == google.maps.GeocoderStatus.OK) {
+            latitude = results[0].geometry.location.lat();
+            longitude = results[0].geometry.location.lng();
+            DannyAddy = { latitude, longitude };
+            console.log(latitude,longitude);
+            callback({ Status: "OK", Latitude: latitude, Longitude: longitude });
+            alert(latitude);
+        } 
+        }); 
+    }
       function initMap() {
+
+        // create location 
+        var geocoder = new google.maps.Geocoder();
+        var address = "4003 Red River St, Austin, TX 78751";
+
+       var DannyAddy = FindLatLong(address, function(data) {
+                    console.log("Init data");
+                    console.log(data);
+                    DannyAddy = data;
+                    console.log("Assigned to var DannyAddy");
+                    console.log(DannyAddy);
+        });
+        console.log("var Danny");
+        console.log(DannyAddy);
         // The location of Uluru
         const uluru = { lat: -25.344, lng: 131.036 };
         // The map, centered at Uluru
@@ -27,6 +57,39 @@
           position: uluru,
           map: map,
         });
+
+        const contentString =
+    '<div id="content">' +
+    '<div id="siteNotice">' +
+    "</div>" +
+    '<h1 id="firstHeading" class="firstHeading">Uluru</h1>' +
+    '<div id="bodyContent">' +
+    "<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large " +
+    "sandstone rock formation in the southern part of the " +
+    "Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) " +
+    "south west of the nearest large town, Alice Springs; 450&#160;km " +
+    "(280&#160;mi) by road. Kata Tjuta and Uluru are the two major " +
+    "features of the Uluru - Kata Tjuta National Park. Uluru is " +
+    "sacred to the Pitjantjatjara and Yankunytjatjara, the " +
+    "Aboriginal people of the area. It has many springs, waterholes, " +
+    "rock caves and ancient paintings. Uluru is listed as a World " +
+    "Heritage Site.</p>" +
+    '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">' +
+    "https://en.wikipedia.org/w/index.php?title=Uluru</a> " +
+    "(last visited June 22, 2009).</p>" +
+    "</div>" +
+    "</div>";
+  const infowindow = new google.maps.InfoWindow({
+    content: contentString,
+  });
+  const marker1 = new google.maps.Marker({
+    position: uluru,
+    map,
+    title: "Uluru (Ayers Rock)",
+  });
+  marker1.addListener("click", () => {
+    infowindow.open(map, marker1);
+  });
       }
     </script>
   </head>
@@ -37,7 +100,7 @@
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDU9weKaiichiN4EeRLNtiXLdgwrlPlM1c&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHQrUTCUzVx64ogCN_vTwQp03MSX48nRo&callback=initMap&libraries=&v=weekly"
       async
     ></script>
   </body>
