--- a/mapDEV.html
+++ b/mapDEV.html
@@ -31,36 +31,56 @@
         // Initialize and add the map
             // Convert Address to Lat, Lng coordinates
             function FindLatLong(address, callback){
-                var geocoder = new google.maps.Geocoder();
+                // var geocoder = new google.maps.Geocoder();
                 geocoder.geocode( { 'address': address}, function(results, status) {
                     if (status == google.maps.GeocoderStatus.OK) {
                         latitude = results[0].geometry.location.lat();
                         longitude = results[0].geometry.location.lng();
                         DannyAddy = { latitude, longitude };
+                        console.log("Inside Findlatlng function");
                         console.log(latitude,longitude);
                         callback({ Status: "OK", Latitude: latitude, Longitude: longitude });
-                        alert(latitude);
+                        // alert(latitude);
+                        return {latitude,longitude};
                     } 
                 }); 
             }
+
+            function addMarker(lat, lng){
+                console.log("inside addMarker...")
+                console.log(lat, lng);
+            }
+            function geocode(address, geocoder, callback) {
+                //do geocoding here...
+                geocoder.geocode({ 'address': address }, function (results, status) {
+                    if (status == google.maps.GeocoderStatus.OK) {
+                        // Call the callback function instead of returning
+                        callback(results);
+                    } else {
+                        alert("Geocode was not successful for the following reason: " + status);
+                    }
+                });
+            }
+
             // Initialize the map with the 2 different markers and their info windows
             function initMap() {
                 // create location 
                 // var geocoder = new google.maps.Geocoder();
-                // var address = "4003 Red River St, Austin, TX 78751";
-                // var DannyAddy = FindLatLong(address, function(data) {});
-                // console.log("var Danny");
-                // console.log(DannyAddy);
+                var geocoder = new google.maps.Geocoder();
+                var address = "4003 Red River St, Austin, TX 78751";
+                geocode(address, geocoder, function(results) {
+                    // function call on geocode success
+                    addMarker(results[0].geometry.location.lat(), results[0].geometry.location.lng());
+                });
+
                 var map;
                 var bounds = new google.maps.LatLngBounds();
                 var mapOptions = {
                     mapTypeId: 'roadmap'
-                };
-                                
+                };                
                 // Display a map on the page
                 map = new google.maps.Map(document.getElementById("map"), mapOptions);
                 map.setTilt(45);
-
                 // Collect Custom Icons
                 const iconBase =
                     "https://maps.google.com/mapfiles/kml/paddle/";
@@ -72,56 +92,47 @@
                     icon: iconBase + "red-circle.png",
                     },
                 };
-
                 // Marker's and Info Window Content
                 var markers = [
                     ['Franklins BBQ, Austin', 30.270090, -97.731270, "red"], 
                     ['Jew Boy Burgers, Austin', 30.312810, -97.715070, "red"], 
                     ['Home Address, Austin', 30.298720, -97.722160, "blue"]
                 ];
-
                 var infoWindowContent = [
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
                         '<h1 id="firstHeading" class="firstHeading">Franklins BBQ</h1>' +
                         '<div id="bodyContent">' +
-                            "<p><b>Dannys House</b>, also referred to as <b>the Temple</b>, is a large " +
-                            "sandstone rock formation in the southern part of the " +
-                            "Heritage Site.</p>" +
-                            '<p>Attribution: Uluru, <a href="post.html">' +
-                            "Review</a> " +
+                            "<p><b>Franklins BBQ</b>, One of the most coveted BBQ spots in America...but will it stand the test against top Berg critics? " +
+                            '<p>Check out the review, <a href="post.html">' +
+                            "Here</a> " +
+                            '<a href="post.html"> <img src="img/bbq2.jpg" width="300" height="200"> </a>' +
                             "</p>" +
                         "</div>" +
                     "</div>"],
                     ['<div id="content">' +
-                    '<div id="siteNotice">' +
-                    "</div>" +
-                    '<h1 id="firstHeading" class="firstHeading">Jew Boy Burgers </h1>' +
-                    '<div id="bodyContent">' +
-                    "<p><b>Jew Boy Burgers</b>, also referred to as <b>the Temple</b>, is a large " +
-                    "sandstone rock formation in the southern part of the " +
-                    "Heritage Site.</p>" +
-                    '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">' +
-                    "https://en.wikipedia.org/w/index.php?title=Uluru</a> " +
-                    "(last visited June 22, 2009).</p>" +
-                    "</div>" +
+                        '<div id="siteNotice">' +
+                        "</div>" +
+                        '<h1 id="firstHeading" class="firstHeading">Jew Boy Burgers </h1>' +
+                        '<div id="bodyContent">' +
+                            "<p><b>Jew Boy Burgers</b>, a killer burger restuarant run by one of the hottest chefs in the game " +
+                            "</p>" +
+                            '<p>Check out the review <a href="post.html">' +
+                            "here</a> " +
+                            "</p>" +
+                        "</div>" +
                     "</div>"],
                     ['<div id="content">' +
-                    '<div id="siteNotice">' +
-                    "</div>" +
-                    '<h1 id="firstHeading" class="firstHeading">Dannys Home </h1>' +
-                    '<div id="bodyContent">' +
-                    "<p><b>Dannys House</b>, also referred to as <b>the Temple</b>, is a large " +
-                    "sandstone rock formation in the southern part of the " +
-                    "Heritage Site.</p>" +
-                    '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">' +
-                    "https://en.wikipedia.org/w/index.php?title=Uluru</a> " +
-                    "(last visited June 22, 2009).</p>" +
-                    "</div>" +
+                        '<div id="siteNotice">' +
+                        "</div>" +
+                        '<h1 id="firstHeading" class="firstHeading">Dannys Home </h1>' +
+                        '<div id="bodyContent">' +
+                            "<p><b>Dannys House</b>, a home where Danny lives " +
+                            "</p>" +
+                        "</div>" +
                     "</div>"],
                 ];
-
                 // Display multiple markers on a map
                 var infoWindow = new google.maps.InfoWindow(), marker, i;
                 // Loop through our array of markers & place each one on the map  
@@ -144,11 +155,6 @@
                     // Automatically center the map fitting all markers on the screen
                     map.fitBounds(bounds);
                 }
-                // Override our map zoom level once our fitBounds function runs (Make sure it only runs once)
-                // var boundsListener = google.maps.event.addListener((map), 'bounds_changed', function(event) {
-                //     this.setZoom(14);
-                //     google.maps.event.removeListener(boundsListener);
-                // });
             }
         </script>
     </head>
@@ -193,50 +199,6 @@
                         </div>
                     </li>
                     <li>
-                        <a href="menu.html" class="hover-subnav ">categories</a>
-                        <div class="subnav image-subnav">
-                            <ul class="subnav-wrapper">			
-                                <li>
-                                    <a href="menu.html#starters">bbq</a>
-                                    <div>
-                                        <a href="menu.html#starters" class="menu-img" style="background-image: url('img/bbq.jpg')"></a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a href="menu.html#salads">pizza</a>
-                                    <div>							
-                                        <a href="menu.html#salads" class="menu-img" style="background-image: url('img/pizza1.jfif')"></a>
-                                    </div>
-                                
-                                </li>
-                                <li>
-                                    <a href="menu.html#soups">burgers</a>
-                                    <div>
-                                        <a href="menu.html#soups" class="menu-img" style="background-image: url('img/burger1.jfif')"></a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a href="menu.html#mains">beer</a>
-                                    <div>
-                                        <a href="menu.html#mains" class="menu-img" style="background-image: url('img/beer1.jfif')"></a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a href="menu.html#desserts">desserts</a>
-                                    <div>
-                                        <a href="menu.html#desserts" class="menu-img" style="background-image: url('img/dessert1.jfif')"></a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a href="menu.html#drinks">cocktails</a>
-                                    <div>							
-                                        <a href="menu.html#drinks" class="menu-img" style="background-image: url('img/cocktails.jfif')"></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>	
-                    <li>
                         <a href="mapDEV.html" class="">map</a>	
                     </li>
                     <li>
@@ -279,6 +241,7 @@
             </ul>
         </div>
     </div>
+
     <!--The div element for the map -->
     <div class='home-fullscreen'>
         <div id="map"></div>
