added mapDEV to mobile NAV

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<a title="" href="blog.html">Reviews</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="map.html">Map</a>
+						<a title="" href="mapDEV.html">Map</a>
 					</li>
 					<li class="nav-item">
 						<a title="" href="contact.html">Contact</a>
