fixed bg img routing error

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 					<div class="col-sm-6 col-lg-3">	
 						<div class="simple-contact">
 							<span class="mobile"><a href="#">(123)456-7891</a></span>
-							<span class="email"><a href="#">feedback@daddy.com</a></span>
+							<span class="email"><a href="#">feedback@test.com</a></span>
 						</div>
 					</div>
 			</div>
