--- a/mapDEV.html
+++ b/mapDEV.html
@@ -102,7 +102,7 @@
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
-                        '<h1 id="firstHeading" class="firstHeading">Franklins BBQ</h1>' +
+                        '<h1 id="firstHeading" class="firstHeading">test map spacer 1, Franklins BBQ</h1>' +
                         '<div id="bodyContent">' +
                             "<p><b>Franklins BBQ</b>, One of the most coveted BBQ spots in America...but will it stand the test against top Berg critics? " +
                             '<p>Check out the review, <a href="post.html">' +
@@ -243,6 +243,7 @@
     </div>
 
     <!--The div element for the map -->
+    <div style="display: none;"></div>
     <div class='home-fullscreen'>
         <div id="map"></div>
     </div>
