--- a/mapDEV.html
+++ b/mapDEV.html
@@ -233,7 +233,7 @@
                     <a title="" href="blog.html">Reviews</a>
                 </li>
                 <li class="nav-item">
-                    <a title="" href="map.html">Map</a>
+                    <a title="" href="mapDEV.html">Map</a>
                 </li>
                 <li class="nav-item">
                     <a title="" href="contact.html">Contact</a>
@@ -245,7 +245,7 @@
     <!--The div element for the map -->
     <div style="display: none;"></div>
     <div class='home-fullscreen'>
-        <div id="map"></div>
+        <div id="map" style ="position: relative !important;"></div>
     </div>
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
