--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
 							</div>
 						</li>
 						<li>
-							<a href="map.html" class="">map</a>	
+							<a href="mapDEV.html" class="">map</a>	
 						</li>
 						<li>
 							<a href="contact.html" class="">contact</a>	
@@ -93,7 +93,7 @@
 						<a title="" href="blog.html">reviews</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="map.html">Map</a>
+						<a title="" href="mapDEV.html">Map</a>
 					</li>
 					<li class="nav-item">
 						<a title="" href="contact.html">contact</a>
@@ -105,7 +105,7 @@
 
 
 <div class="section-intro" data-opacity-start="30" data-opacity-end="100" data-background="img/bbq.jpg">
-	<div class=" pre-content">
+	<div class="pre-content">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-md-12">
