--- a/mapDEV.html
+++ b/mapDEV.html
@@ -160,7 +160,6 @@
     </head>
     <body class="show-nav home-page yo-anim-enabled">
     <div class="content-wrapper">
-
     <nav id="main-navbar" class="hidden-xs hidden-sm">
         <div class="nav hidden-xs">
             <div class="main-reorder pull-right">
@@ -241,7 +240,54 @@
             </ul>
         </div>
     </div>
-
+    <nav id="main-navbar" class="hidden-xs hidden-sm">
+        <div class="nav hidden-xs">
+            <div class="main-reorder pull-right">
+                <a href="#">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+    
+            <div class="logo pull-left">
+                <a href="index.html">
+                    <figure>
+                        <img src="img/logo1.png" class="light-logo" alt="Berg HTML Theme"/>
+                        <img src="img/logo2.png" class="dark-logo" alt="Berg HTML Theme"/>
+                    </figure>
+                </a>
+            </div>
+            <div class="main-nav">
+                <ul class="pull-right">
+                    <li>
+                        <a href="index.html" class=" active   ">home</a>					
+                    </li>				
+                    <li>
+                        <a href="blog.html" class="">reviews</a>
+                        <div class="subnav image-subnav">
+                            <ul class="subnav-wrapper image-subnav">
+                                <li>
+                                    <a href="blog.html" class="">Top</a>
+                                </li>
+                                <li>
+                                    <a href="blog.html" class="">All</a>
+                                </li>
+                                <li>
+                                    <a href="blog.html" class="">Worst</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="mapDEV.html" class="">map</a>	
+                    </li>
+                    <li>
+                        <a href="contact.html" class="">contact</a>	
+                    </li>
+    
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!--The div element for the map -->
     <div style="display: none;"></div>
     <div class='home-fullscreen'>
