added New York and Dallas Maps

--- a/blog.html
+++ b/blog.html
@@ -48,24 +48,48 @@
 							<div class="subnav image-subnav">
 								<ul class="subnav-wrapper image-subnav">
 									<li>
-										<a href="blog.html" class="">Top</a>
+										<a href="blog.html" class="">Dallas</a>
 									</li>
 									<li>
-										<a href="post.html" class="">Latest</a>
+										<a href="blog.html" class="">New York</a>
 									</li>
 									<li>
-										<a href="post2.html" class="">worst</a>
+										<a href="blog.html" class="">Austin</a>
 									</li>
 								</ul>
 							</div>
 						</li>
 						<li>
-							<a href="mapDEV.html" class="">map</a>	
-						</li>
+							<a href="mapDEV.html" class="hover-subnav ">Maps</a>
+							<div class="subnav image-subnav">
+								<ul class="subnav-wrapper">			
+									<li>
+										<a href="mapDEV.html">Dallas</a>
+										<div>
+											<a href="mapDevDallas.html" class="menu-img" style="background-image: url('img/dallas.jpg')"></a>
+										</div>
+									</li>
+									<li>
+										<a href="mapDEV.html">Austin</a>
+										<div>							
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/austin.jpg')"></a>
+										</div>
+									
+									</li>
+									<li>
+										<a href="mapDEV.html">New York</a>
+										<div>
+											<a href="mapDevNewYork.html" class="menu-img" style="background-image: url('img/NY.jpg')"></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</li>	
 						<li>
 							<a href="contact.html" class="">contact</a>	
 						</li>
-
+		
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -90,17 +114,88 @@
 						<a title="" href="index.html">home</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="blog.html">reviews</a>
+						<a title="" href="blog.html">Reviews</a>
 					</li>
 					<li class="nav-item">
 						<a title="" href="mapDEV.html">Map</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="contact.html">contact</a>
+						<a title="" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
 		</div>
+		<nav id="main-navbar" class="hidden-xs hidden-sm">
+			<div class="nav hidden-xs">
+				<div class="main-reorder pull-right">
+					<a href="#">
+						<i class="fa fa-bars"></i>
+					</a>
+				</div>
+		
+				<div class="logo pull-left">
+					<a href="index.html">
+						<figure>
+							<img src="img/logo1.png" class="light-logo" alt="Berg HTML Theme"/>
+							<img src="img/logo2.png" class="dark-logo" alt="Berg HTML Theme"/>
+						</figure>
+					</a>
+				</div>
+				<div class="main-nav">
+					<ul class="pull-right">
+						<li>
+							<a href="index.html" class=" active   ">home</a>					
+						</li>				
+						<li>
+							<a href="blog.html" class="">reviews</a>
+							<div class="subnav image-subnav">
+								<ul class="subnav-wrapper image-subnav">
+									<li>
+										<a href="blog.html" class="">Dallas</a>
+									</li>
+									<li>
+										<a href="blog.html" class="">New York</a>
+									</li>
+									<li>
+										<a href="blog.html" class="">Austin</a>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="mapDEV.html" class="hover-subnav ">Maps</a>
+							<div class="subnav image-subnav">
+								<ul class="subnav-wrapper">			
+									<li>
+										<a href="mapDevDallas.html">Dallas</a>
+										<div>
+											<a href="mapDevDallas.html" class="menu-img" style="background-image: url('img/dallas.jpg')"></a>
+										</div>
+									</li>
+									<li>
+										<a href="mapDEV.html">Austin</a>
+										<div>							
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/austin.jpg')"></a>
+										</div>
+									
+									</li>
+									<li>
+										<a href="mapDevNewYork.html">New York</a>
+										<div>
+											<a href="mapDevNewYork.html" class="menu-img" style="background-image: url('img/NY.jpg')"></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</li>	
+						<li>
+							<a href="contact.html" class="">contact</a>	
+						</li>
+		
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 
 
