--- a/mapDevNewYork.html
+++ b/mapDevNewYork.html
@@ -94,17 +94,17 @@
                 };
                 // Marker's and Info Window Content
                 var markers = [
-                    ['Franklins BBQ, Austin', 30.270090, -97.731270, "red"], 
-                    ['Jew Boy Burgers, Austin', 30.312810, -97.715070, "red"], 
-                    ['Home Address, Austin', 30.298720, -97.722160, "blue"]
+                    ['Le Bernardin, New York', 40.761561, -73.982213, "red"], 
+                    ['Gramercy Tavern, New York', 40.738541, -73.988505, "red"], 
+                    ['Momofuku Ko, New York', 40.738541, -73.888505, "blue"]
                 ];
                 var infoWindowContent = [
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
-                        '<h1 id="firstHeading" class="firstHeading">Franklins BBQ</h1>' +
+                        '<h1 id="firstHeading" class="firstHeading">Le Bernardin, New York</h1>' +
                         '<div id="bodyContent">' +
-                            "<p><b>Franklins BBQ</b>, One of the most coveted BBQ spots in America...but will it stand the test against top Berg critics? " +
+                            "<p><b>Le Bernardin</b>, One of the top restuarants in NY" +
                             '<p>Check out the review, <a href="post.html">' +
                             "Here</a> " +
                             '<a href="post.html"> <img src="img/bbq2.jpg" width="300" height="200"> </a>' +
@@ -114,9 +114,9 @@
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
-                        '<h1 id="firstHeading" class="firstHeading">Jew Boy Burgers </h1>' +
+                        '<h1 id="firstHeading" class="firstHeading">Gramercy Tavern</h1>' +
                         '<div id="bodyContent">' +
-                            "<p><b>Jew Boy Burgers</b>, a killer burger restuarant run by one of the hottest chefs in the game " +
+                            "<p><b>Gramercy Tavern</b>, One of the top restuarants in NY" +
                             "</p>" +
                             '<p>Check out the review <a href="post.html">' +
                             "here</a> " +
@@ -126,9 +126,9 @@
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
-                        '<h1 id="firstHeading" class="firstHeading">Dannys Home </h1>' +
+                        '<h1 id="firstHeading" class="firstHeading">Momofuku Ko</h1>' +
                         '<div id="bodyContent">' +
-                            "<p><b>Dannys House</b>, a home where Danny lives " +
+                            "<p><b>Momofuku Ko</b>, One of the top restuarants in NY" +
                             "</p>" +
                         "</div>" +
                     "</div>"],
