--- a/mapDevDallas.html
+++ b/mapDevDallas.html
@@ -94,17 +94,17 @@
                 };
                 // Marker's and Info Window Content
                 var markers = [
-                    ['Franklins BBQ, Austin', 30.270090, -97.731270, "red"], 
-                    ['Jew Boy Burgers, Austin', 30.312810, -97.715070, "red"], 
-                    ['Home Address, Austin', 30.298720, -97.722160, "blue"]
+                    ['The French Room, Dallas', 32.779980, -96.799858, "red"], 
+                    ['Uchi, Dallas', 32.796761, -96.806648, "red"], 
+                    ['St. Martins, Dallas', 32.825730, -96.769880, "blue"]
                 ];
                 var infoWindowContent = [
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
-                        '<h1 id="firstHeading" class="firstHeading">Franklins BBQ</h1>' +
+                        '<h1 id="firstHeading" class="firstHeading">The French Room</h1>' +
                         '<div id="bodyContent">' +
-                            "<p><b>Franklins BBQ</b>, One of the most coveted BBQ spots in America...but will it stand the test against top Berg critics? " +
+                            "<p><b>The French Room</b>, One of the top restuarants in Dallas " +
                             '<p>Check out the review, <a href="post.html">' +
                             "Here</a> " +
                             '<a href="post.html"> <img src="img/bbq2.jpg" width="300" height="200"> </a>' +
@@ -114,9 +114,9 @@
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
-                        '<h1 id="firstHeading" class="firstHeading">Jew Boy Burgers </h1>' +
+                        '<h1 id="firstHeading" class="firstHeading">Uchi </h1>' +
                         '<div id="bodyContent">' +
-                            "<p><b>Jew Boy Burgers</b>, a killer burger restuarant run by one of the hottest chefs in the game " +
+                            "<p><b>Uchi</b>, One of the top restuarants in Dallas " +
                             "</p>" +
                             '<p>Check out the review <a href="post.html">' +
                             "here</a> " +
@@ -126,9 +126,9 @@
                     ['<div id="content">' +
                         '<div id="siteNotice">' +
                         "</div>" +
-                        '<h1 id="firstHeading" class="firstHeading">Dannys Home </h1>' +
+                        '<h1 id="firstHeading" class="firstHeading">St. Martins </h1>' +
                         '<div id="bodyContent">' +
-                            "<p><b>Dannys House</b>, a home where Danny lives " +
+                            "<p><b>St. Martins</b>, One of the top restuarants in Dallas " +
                             "</p>" +
                         "</div>" +
                     "</div>"],
