--- a/post.html
+++ b/post.html
@@ -48,64 +48,43 @@
 							<div class="subnav image-subnav">
 								<ul class="subnav-wrapper image-subnav">
 									<li>
-										<a href="blog.html" class="">Top</a>
+										<a href="blog.html" class="">Dallas</a>
 									</li>
 									<li>
-										<a href="blog.html" class="">All</a>
+										<a href="blog.html" class="">New York</a>
 									</li>
 									<li>
-										<a href="blog.html" class="">Worst</a>
+										<a href="blog.html" class="">Austin</a>
 									</li>
 								</ul>
 							</div>
 						</li>
 						<li>
-							<a href="menu.html" class="hover-subnav ">categories</a>
+							<a href="mapDEV.html" class="hover-subnav ">Maps</a>
 							<div class="subnav image-subnav">
 								<ul class="subnav-wrapper">			
 									<li>
-										<a href="menu.html#starters">bbq</a>
+										<a href="mapDEV.html">Dallas</a>
 										<div>
-											<a href="menu.html#starters" class="menu-img" style="background-image: url('img/bbq.jpg')"></a>
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/dallas.jpg')"></a>
 										</div>
 									</li>
 									<li>
-										<a href="menu.html#salads">pizza</a>
+										<a href="mapDEV.html">Austin</a>
 										<div>							
-											<a href="menu.html#salads" class="menu-img" style="background-image: url('img/pizza1.jfif')"></a>
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/austin.jpg')"></a>
 										</div>
 									
 									</li>
 									<li>
-										<a href="menu.html#soups">burgers</a>
+										<a href="mapDEV.html">New York</a>
 										<div>
-											<a href="menu.html#soups" class="menu-img" style="background-image: url('img/burger1.jfif')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="menu.html#mains">beer</a>
-										<div>
-											<a href="menu.html#mains" class="menu-img" style="background-image: url('img/beer1.jfif')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="menu.html#desserts">desserts</a>
-										<div>
-											<a href="menu.html#desserts" class="menu-img" style="background-image: url('img/dessert1.jfif')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="menu.html#drinks">cocktails</a>
-										<div>							
-											<a href="menu.html#drinks" class="menu-img" style="background-image: url('img/cocktails.jfif')"></a>
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/NY.jpg')"></a>
 										</div>
 									</li>
 								</ul>
 							</div>
 						</li>	
-						<li>
-							<a href="map.html" class="">map</a>	
-						</li>
 						<li>
 							<a href="contact.html" class="">contact</a>	
 						</li>
@@ -138,7 +117,7 @@
 						<a title="" href="blog.html">Reviews</a>
 					</li>
 					<li class="nav-item">
-						<a title="" href="map.html">Map</a>
+						<a title="" href="mapDEV.html">Map</a>
 					</li>
 					<li class="nav-item">
 						<a title="" href="contact.html">Contact</a>
@@ -146,6 +125,77 @@
 				</ul>
 			</div>
 		</div>
+		<nav id="main-navbar" class="hidden-xs hidden-sm">
+			<div class="nav hidden-xs">
+				<div class="main-reorder pull-right">
+					<a href="#">
+						<i class="fa fa-bars"></i>
+					</a>
+				</div>
+		
+				<div class="logo pull-left">
+					<a href="index.html">
+						<figure>
+							<img src="img/logo1.png" class="light-logo" alt="Berg HTML Theme"/>
+							<img src="img/logo2.png" class="dark-logo" alt="Berg HTML Theme"/>
+						</figure>
+					</a>
+				</div>
+				<div class="main-nav">
+					<ul class="pull-right">
+						<li>
+							<a href="index.html" class=" active   ">home</a>					
+						</li>				
+						<li>
+							<a href="blog.html" class="">reviews</a>
+							<div class="subnav image-subnav">
+								<ul class="subnav-wrapper image-subnav">
+									<li>
+										<a href="blog.html" class="">Dallas</a>
+									</li>
+									<li>
+										<a href="blog.html" class="">New York</a>
+									</li>
+									<li>
+										<a href="blog.html" class="">Austin</a>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="mapDEV.html" class="hover-subnav ">Maps</a>
+							<div class="subnav image-subnav">
+								<ul class="subnav-wrapper">			
+									<li>
+										<a href="mapDEV.html">Dallas</a>
+										<div>
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/dallas.jpg')"></a>
+										</div>
+									</li>
+									<li>
+										<a href="mapDEV.html">Austin</a>
+										<div>							
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/austin.jpg')"></a>
+										</div>
+									
+									</li>
+									<li>
+										<a href="mapDEV.html">New York</a>
+										<div>
+											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/NY.jpg')"></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</li>	
+						<li>
+							<a href="contact.html" class="">contact</a>	
+						</li>
+		
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 
 
